chinh sua loi nho.

--- a/data_processing/etl_config.json
+++ b/data_processing/etl_config.json
@@ -2,7 +2,7 @@
   "sqlserver": {
     "odbc_driver": "ODBC Driver 17 for SQL Server",
     "server": "localhost\\SQLEXPRESS",
-    "database": "test6",
+    "database": "crm_ctm",
     "auth": "windows",
     "encrypt": "yes",
     "trust_server_certificate": "yes"
